--- a/navigator.html
+++ b/navigator.html
@@ -40,7 +40,7 @@
                     <td></td>
                     <td></td>
                 </tr>
-                <tr id="cookieEnabled">
+                <tr id="productSub">
                     <td></td>
                     <td></td>
                 </tr>
